plugins {
    id "java"
}

ext {
    mcreator_path = "C:/Program Files/Pylo/MCreator_2025-3"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

tasks.jar {
    archiveFileName.set("parcoolapi.zip")
}

tasks.register('runMCreatorWithPlugin', JavaExec) {
    dependsOn jar

    environment("MCREATOR_PLUGINS_FOLDER", file("./build/libs"))

    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'

    classpath = fileTree(dir: project.ext.mcreator_path + "/lib", include: ["*.jar"])

    mainClass = 'net.mcreator.Launcher'

    workingDir = file(project.ext.mcreator_path)
}